# dl-text-recoginze

./: .gitignore  CLAUDE.md  PLAN.md  README.md  pyproject.toml  任务书.md
change_records/: 2026-04-04-1815-detection-scaffold.md  2026-04-04-1815-infra-ci-bootstrap.md  2026-04-04-1815-rec-sem-scaffold.md  2026-04-04-1830-data-subsystem.md  2026-04-04-1905-cli-rects-first.md  2026-04-04-2115-rects-dataset-bridge.md  2026-04-04-2135-packaging-hygiene.md  2026-04-04-2205-shopsign-bridge.md  2026-04-04-2245-physical-data-layout-and-wrapper.md  2026-04-04-2315-recognition-preparation.md  2026-04-04-2335-detection-preparation.md  2026-04-05-0010-crnn-training-baseline.md  2026-04-05-0035-detector-training-baseline.md  2026-04-05-0105-ci-det-metrics-no-torch.md  2026-04-05-0145-recognition-crops-from-detection.md  2026-04-05-0210-end-to-end-image-pipeline.md  2026-04-05-0245-training-history-and-best-checkpoint.md  2026-04-05-0315-training-report-automation.md  2026-04-05-0345-project-summary-and-checkpoint-discovery.md  2026-04-05-0430-streamlit-demo-frontend.md  2026-04-05-0505-report-build-all-and-demo-polish.md  2026-04-05-0515-streamlit-ui-localization-zh.md  2026-04-05-0605-semantic-training-baseline.md  2026-04-05-0635-report-smoke-configs.md  2026-04-05-0715-real-report-suite-and-hardcase.md  2026-04-05-2050-4090-training-configs.md  2026-04-05-2135-training-progress-and-zh-output.md  2026-04-05-2145-recognition-crop-progress.md  2026-04-05-2215-tqdm-and-recognition-tuning.md  2026-04-06-0010-plan-restructure-ocr-mainline.md  2026-04-06-0035-report-mainline-restructure.md  (+27 more)
(+231 files in other folders)
